# sentiment_analysis_transformer_model_comparison

./: .env  .gitignore  README.md  app.ipynb  pyproject.toml  test.py
.ipynb_checkpoints/: app-checkpoint.ipynb
app/: .env  app.ipynb  evaluate.py  evaluation.py  gpu_utilize_testing.py  load_data.py  main.py  preprocess.py  run_xlnet.py  test.py  train.py  xlnet_model.py
app/core/: __init__.py  tokenizer.py
app/core/external_dataset_loader/: load_data.py
app/core/model/: xlnet_model.py
app/xlnet-model-output/runs/Apr15_11-14-39_IvsD/: events.out.tfevents.1713172485.IvsD.45732.0
my_awesome_model/runs/Apr12_12-50-02_IvsD/: events.out.tfevents.1712919003.IvsD.2012.0
my_awesome_model/runs/Apr12_12-50-30_IvsD/: events.out.tfevents.1712919030.IvsD.2012.1
my_awesome_model/runs/Apr12_12-50-36_IvsD/: events.out.tfevents.1712919036.IvsD.2012.2
my_awesome_model/runs/Apr12_12-52-29_IvsD/: events.out.tfevents.1712919149.IvsD.2012.3
my_awesome_model/runs/Apr12_12-53-05_IvsD/: events.out.tfevents.1712919186.IvsD.23528.0
my_awesome_model/runs/Apr12_12-57-06_IvsD/: events.out.tfevents.1712919427.IvsD.23528.1
my_awesome_model/runs/Apr12_13-04-11_IvsD/: events.out.tfevents.1712919854.IvsD.1972.0
my_awesome_model/runs/Apr13_11-28-30_IvsD/: events.out.tfevents.1713000515.IvsD.37612.0
xlnet-model-output/runs/Apr15_10-22-28_IvsD/: events.out.tfevents.1713169351.IvsD.31348.0
xlnet-model-output/runs/Apr15_10-26-20_IvsD/: events.out.tfevents.1713169583.IvsD.32856.0
xlnet-model-output/runs/Apr15_10-27-46_IvsD/: events.out.tfevents.1713169670.IvsD.34056.0
