[tool.poetry]
name = "sentiment-analysis-transformer-model-comparison"
version = "0.1.0"
description = ""
authors = ["Ivareh <69577035+Ivareh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
