[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ivareh <69577035+Ivareh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.2"
transformers = "^4.39.3"
datasets = "^2.18.0"
evaluate = "^0.4.1"
accelerate = "^0.29.2"
sentencepiece = "^0.2.0"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp312-cp312-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp312-cp312-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.2%2Bcu121-cp312-cp312-win_amd64.whl"}
pynvml = "^11.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
